- Set attackDistanceAuto to 1 if you want attackDistance and
  attackMaxDistance to be automatically set by autodetection.
- New "dealAuto 3" setting works as a mix of 0 and 2.
  - It will auto-accept incoming deals.
  - It will finalize and trade if other party finalizes.
- Detect "Unknown error 10" = "You are out of available time paid for".
- "eq" command now accepts item names.

New config options:
- autoSpell (spell name)
  When the sage autospell list is sent from the server, Kore will
  automatically pick the specified skill name to be used.
  Combine this with a useSelf_skill for casting Auto Spell.
- tankersList is a comma-seperated lists of player names that should be
  treated as if they were in your party so they can tank monsters for you.
  It was previously called ksPlayers.
- dcOnPM (flag)
  Disconnect when somebody sends you a PM.
- relogAfterStorage (flag)
  Relogin after performing autostorage. This works around a server bug
  which causes autostorage to fail when you do it the second time.
- teleportAuto_useSkill (number)
  Specifies how you want to teleport.
  0 = Use Fly Wing to teleport. If Fly Wing is not available, use the
      Teleport skill if available.
  1 = Use the Teleport skill to teleport, and always show the "Teleport!!"
      message on top of your head when teleporting. If the Teleport skill
      is not available, Fly Wings will be used if available.
  2 = Use the Teleport skill to teleport, and only show the "Teleport!!"
      message on top of your head when teleporting, if there are other
      players on screen. If the Teleport skill is not available, Fly Wings
      will be used if available.
  3 = Use the teleport skill and never show the "Teleport!!" message. No
      SP will be used when teleporting. This option only works on official
      servers, not on eAthena or Freya servers.

Internal:
- Wx interface: load some modules only when they're necessary. This
  saves about 2 MB memory.