@@ -72,6 +72,7 @@ New features:
   - It will finalize and trade if other party finalizes.
 - Detect "Unknown error 10" = "You are out of available time paid for".
 - "eq" command now accepts item names.
+- Add new commands: doridori, bingbing, bangbang.
 
 New config options:
 - autoSpell (spell name)
